fix(Global): Wrong font-family for all icons - review

--- a/client/app/common/less/common.less
+++ b/client/app/common/less/common.less
@@ -1,9 +1,5 @@
 @text-disabled-color: #757575;
 
-.ovh-font {
-    font-family: "ovh-font";
-}
-
 .no-wrap {
     white-space: nowrap;
 }
